--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,14 @@ services:
   letsencrypt:
     container_name: letsencrypt-store
     restart: always
-    image: kvaps/letsencrypt-webroot
+    build: ./letsencrypt
+    image: letsencrypt:itlabstore
     volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
       - /etc/letsencrypt:/etc/letsencrypt
       - ./conf/data/letsencrypt-www:/tmp/letsencrypt
     environment:
+      LE_RENEW_ID: nginx-store  # nginx's container name
       # DOMAINS: example.com
       # EMAIL: webmaster@example.com
       WEBROOT_PATH: /tmp/letsencrypt
@@ -43,8 +46,6 @@ services:
     ports:
       - "80:80"
       - "17106:17106"
-    environment:
-      - LE_RENEW_HOOK=docker kill -s HUP @CONTAINER_NAME@
     volumes:
       # - ./conf/nginx_init.conf:/etc/nginx/nginx.conf:ro
       - ./conf/nginx.conf:/etc/nginx/nginx.conf:ro
