--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,7 @@
+worker_processes auto;
+
 events {
-    worker_connections 768; 
+    worker_connections 1024; 
 }
 
 http {
@@ -13,16 +15,19 @@ http {
       }
 
       location / {
+          access_log off;
           return 444;
       }
     }
     
     server {
-        listen 17106 ssl http2;
-        listen [::]:17106 ssl http2;
+        listen 443 ssl http2;
         # server_name example.com;
+        
         charset utf-8;
-
+        gzip            on;
+        gzip_disable    "msie6";
+        
         error_page 497 https://$host:$server_port$request_uri;
 
         location = /favicon.ico {
@@ -32,15 +37,12 @@ http {
 
         location /static/ {
             root /www/;
+            access_log off;
         }
 
         location / {
-            include         uwsgi_params;
-            uwsgi_pass      unix:/www/ITLabStore.sock;
+            proxy_pass http://web:8000;
         }
-
-        # ssl_certificate     /etc/letsencrypt/live/example.com/fullchain.pem;
-        # ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
     }
 
     include             mime.types;
@@ -50,9 +52,40 @@ http {
     tcp_nopush          on;
     tcp_nodelay         on;
     keepalive_timeout   65;
-    gzip                on;
-    gzip_disable        "msie6";
 
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    # Other Settings
+    server_tokens       off; # Hide Nginx Version
+    add_header          Strict-Transport-Security   "max-age=63072000;";
+    add_header          X-Frame-Options             SAMEORIGIN;
+    add_header          X-Content-Type-Options      nosniff;
+    add_header          X-XSS-Protection            "1; mode=block";
+    add_header          Expect-CT                   "max-age=0";
+
+    # Proxy Settings
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+
+    proxy_redirect off;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Host $server_name;
+    proxy_set_header X-Forwarded-Proto https; # $scheme;
+
+    # SSL Settings https://community.letsencrypt.org/t/howto-a-with-all-100-s-on-ssl-labs-test-using-nginx-mainline-stable/55033
+    ssl_protocols       TLSv1.2;
     ssl_prefer_server_ciphers on;
+    ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384';
+    ssl_ecdh_curve      secp384r1;
+    ssl_session_cache   shared:SSL:20m;
+    ssl_session_timeout 60m;
+    ssl_session_tickets off;
+    ssl_stapling        on;
+    ssl_stapling_verify on;
+    
+    # ssl_trusted_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
+    # ssl_certificate     /etc/letsencrypt/live/example.com/fullchain.pem;
+    # ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+    # ssl_dhparam         /etc/letsencrypt/live/example.com/dhparam.pem;
 }
