--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,22 +9,38 @@ services:
       - '/etc/localtime:/etc/localtime'
       - './conf/noip.conf:/config/noip.conf'
   
-  letsencrypt:
-    container_name: letsencrypt-store
+  nginx:
+    container_name: nginx-store
+    image: nginx:alpine
     restart: always
-    build: ./letsencrypt
-    image: letsencrypt:itlabstore
+    ports:
+      - "80:80"
+      - "443:443"
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /etc/letsencrypt:/etc/letsencrypt
-      - ./conf/data/letsencrypt-www:/tmp/letsencrypt
+      # - './conf/nginx_init.conf:/etc/nginx/nginx.conf:ro'
+      - './conf/nginx.conf:/etc/nginx/nginx.conf:ro'
+      - './conf/letsencrypt/:/etc/letsencrypt'
+      - './conf/tmp/letsencrypt-www:/tmp/letsencrypt/'
+      - './web/app:/www'
+    depends_on:
+      - web
+
+  certbot:
+    container_name: certbot-store
+    restart: always
+    build: ./certbot
+    image: certbot:store
+    volumes:
+      - './conf/letsencrypt/:/etc/letsencrypt/'
+      - './conf/tmp/letsencrypt-www:/tmp/letsencrypt/'
+      - '/var/run/docker.sock:/var/run/docker.sock:ro'
     environment:
       LE_RENEW_ID: nginx-store  # nginx's container name
       # DOMAINS: example.com
       # EMAIL: webmaster@example.com
       WEBROOT_PATH: /tmp/letsencrypt
       EXP_LIMIT: 30
-      CHECK_FREQ: 30
+      CHECK_FREQ: 15
     depends_on:
       - noip
       - nginx
@@ -32,25 +48,10 @@ services:
   web:
     container_name: web-store
     build: ./web
-    image: web:itlabstore
+    image: web:store
     restart: always
-    command: sh -c "/run.sh"
+    command: sh /run.sh
     volumes:
       - './web/app:/www'
       - './web/run.sh:/run.sh'
-  
-  nginx:
-    container_name: nginx-store
-    image: nginx:alpine
-    restart: always
-    ports:
-      - "80:80"
-      - "17106:17106"
-    volumes:
-      # - ./conf/nginx_init.conf:/etc/nginx/nginx.conf:ro
-      - ./conf/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt:/etc/letsencrypt
-      - ./conf/data/letsencrypt-www:/tmp/letsencrypt
-      - './web/app:/www'
-    depends_on:
-      - web
+      - './web/crontab:/crontab'
