--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 *.sh filter=ignoreline
 *.conf filter=ignoreline
 *.yml filter=ignoreline
+# git config --global filter.ignoreline.clean "sed '/#ignoreline$/'d"
+# git config --global filter.ignoreline.smudge cat
