--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,9 @@ services:
     volumes:
       # - './conf/nginx_init.conf:/etc/nginx/nginx.conf:ro'
       - './conf/nginx.conf:/etc/nginx/nginx.conf:ro'
-      - './conf/letsencrypt/:/etc/letsencrypt'
+      - './conf/letsencrypt/:/etc/letsencrypt/'
       - './conf/tmp/letsencrypt-www:/tmp/letsencrypt/'
-      - './web/app:/www'
+      - './web/app:/www/'
     depends_on:
       - web
 
@@ -52,7 +52,9 @@ services:
     restart: always
     command: sh /run.sh
     volumes:
-      - './web/app:/www'
+      - './web/app:/www/'
       - './web/run.sh:/run.sh'
       - './web/crontab:/crontab'
-      # - '/etc/letsencrypt/:/keys'
+      # - '/etc/letsencrypt/:/keys/'
+    # ports:
+    #   - "17106:8000"
